--- a/_doc/notebooks/dsgarden/discret_gradient.ipynb
+++ b/_doc/notebooks/dsgarden/discret_gradient.ipynb
@@ -10,150 +10,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div id=\"my_id_menu_nb\">run previous cell, wait for 2 seconds</div>\n",
-       "<script>\n",
-       "function repeat_indent_string(n){\n",
-       "    var a = \"\" ;\n",
-       "    for ( ; n > 0 ; --n)\n",
-       "        a += \"    \";\n",
-       "    return a;\n",
-       "}\n",
-       "// look up into all sections and builds an automated menu //\n",
-       "var update_menu_string = function(begin, lfirst, llast, sformat, send, keep_item, begin_format, end_format) {\n",
-       "    var anchors = document.getElementsByClassName(\"section\");\n",
-       "    if (anchors.length == 0) {\n",
-       "        anchors = document.getElementsByClassName(\"text_cell_render rendered_html\");\n",
-       "    }\n",
-       "    var i,t;\n",
-       "    var text_menu = begin;\n",
-       "    var text_memo = \"<pre>\\nlength:\" + anchors.length + \"\\n\";\n",
-       "    var ind = \"\";\n",
-       "    var memo_level = 1;\n",
-       "    var href;\n",
-       "    var tags = [];\n",
-       "    var main_item = 0;\n",
-       "    var format_open = 0;\n",
-       "    for (i = 0; i <= llast; i++)\n",
-       "        tags.push(\"h\" + i);\n",
-       "\n",
-       "    for (i = 0; i < anchors.length; i++) {\n",
-       "        text_memo += \"**\" + anchors[i].id + \"--\\n\";\n",
-       "\n",
-       "        var child = null;\n",
-       "        for(t = 0; t < tags.length; t++) {\n",
-       "            var r = anchors[i].getElementsByTagName(tags[t]);\n",
-       "            if (r.length > 0) {\n",
-       "child = r[0];\n",
-       "break;\n",
-       "            }\n",
-       "        }\n",
-       "        if (child == null) {\n",
-       "            text_memo += \"null\\n\";\n",
-       "            continue;\n",
-       "        }\n",
-       "        if (anchors[i].hasAttribute(\"id\")) {\n",
-       "            // when converted in RST\n",
-       "            href = anchors[i].id;\n",
-       "            text_memo += \"#1-\" + href;\n",
-       "            // passer à child suivant (le chercher)\n",
-       "        }\n",
-       "        else if (child.hasAttribute(\"id\")) {\n",
-       "            // in a notebook\n",
-       "            href = child.id;\n",
-       "            text_memo += \"#2-\" + href;\n",
-       "        }\n",
-       "        else {\n",
-       "            text_memo += \"#3-\" + \"*\" + \"\\n\";\n",
-       "            continue;\n",
-       "        }\n",
-       "        var title = child.textContent;\n",
-       "        var level = parseInt(child.tagName.substring(1,2));\n",
-       "\n",
-       "        text_memo += \"--\" + level + \"?\" + lfirst + \"--\" + title + \"\\n\";\n",
-       "\n",
-       "        if ((level < lfirst) || (level > llast)) {\n",
-       "            continue ;\n",
-       "        }\n",
-       "        if (title.endsWith('¶')) {\n",
-       "            title = title.substring(0,title.length-1).replace(\"<\", \"&lt;\")\n",
-       "         .replace(\">\", \"&gt;\").replace(\"&\", \"&amp;\");\n",
-       "        }\n",
-       "        if (title.length == 0) {\n",
-       "            continue;\n",
-       "        }\n",
-       "\n",
-       "        while (level < memo_level) {\n",
-       "            text_menu += end_format + \"</ul>\\n\";\n",
-       "            format_open -= 1;\n",
-       "            memo_level -= 1;\n",
-       "        }\n",
-       "        if (level == lfirst) {\n",
-       "            main_item += 1;\n",
-       "        }\n",
-       "        if (keep_item != -1 && main_item != keep_item + 1) {\n",
-       "            // alert(main_item + \" - \" + level + \" - \" + keep_item);\n",
-       "            continue;\n",
-       "        }\n",
-       "        while (level > memo_level) {\n",
-       "            text_menu += \"<ul>\\n\";\n",
-       "            memo_level += 1;\n",
-       "        }\n",
-       "        text_menu += repeat_indent_string(level-2);\n",
-       "        text_menu += begin_format + sformat.replace(\"__HREF__\", href).replace(\"__TITLE__\", title);\n",
-       "        format_open += 1;\n",
-       "    }\n",
-       "    while (1 < memo_level) {\n",
-       "        text_menu += end_format + \"</ul>\\n\";\n",
-       "        memo_level -= 1;\n",
-       "        format_open -= 1;\n",
-       "    }\n",
-       "    text_menu += send;\n",
-       "    //text_menu += \"\\n\" + text_memo;\n",
-       "\n",
-       "    while (format_open > 0) {\n",
-       "        text_menu += end_format;\n",
-       "        format_open -= 1;\n",
-       "    }\n",
-       "    return text_menu;\n",
-       "};\n",
-       "var update_menu = function() {\n",
-       "    var sbegin = \"\";\n",
-       "    var sformat = '<a href=\"#__HREF__\">__TITLE__</a>';\n",
-       "    var send = \"\";\n",
-       "    var begin_format = '<li>';\n",
-       "    var end_format = '</li>';\n",
-       "    var keep_item = -1;\n",
-       "    var text_menu = update_menu_string(sbegin, 2, 4, sformat, send, keep_item,\n",
-       "       begin_format, end_format);\n",
-       "    var menu = document.getElementById(\"my_id_menu_nb\");\n",
-       "    menu.innerHTML=text_menu;\n",
-       "};\n",
-       "window.setTimeout(update_menu,2000);\n",
-       "            </script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from jyquickhelper import add_notebook_menu\n",
-    "\n",
-    "add_notebook_menu()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -349,7 +205,7 @@
     "    for i in classes:\n",
     "        X2 = numpy.zeros((X.shape[0], 3))\n",
     "        X2[:, i] = 1\n",
-    "        Yb = Y == i\n",
+    "        Yb = i == Y\n",
     "        XS.append(numpy.hstack([X, X2]))\n",
     "        Yb = Yb.reshape((len(Yb), 1))\n",
     "        YS.append(Yb)\n",
@@ -678,7 +534,7 @@
     "        # X2 = numpy.random.randn((X.shape[0]* 3)).reshape(X.shape[0], 3) * 0.1\n",
     "        X2 = numpy.random.random((X.shape[0], 3)) * 0.2\n",
     "        X2[:, i] += 1\n",
-    "        Yb = Y == i\n",
+    "        Yb = i == Y\n",
     "        XS.append(numpy.hstack([X, X2]))\n",
     "        Yb = Yb.reshape((len(Yb), 1))\n",
     "        YS.append(Yb)\n",
@@ -1084,7 +940,7 @@
     ")\n",
     "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.neighbors import KNeighborsClassifier, RadiusNeighborsClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
     "from xgboost import XGBClassifier\n",
     "\n",
     "models = [\n",
@@ -1806,7 +1662,7 @@
     "        # X2 = numpy.random.randn((X.shape[0]* 3)).reshape(X.shape[0], 3) * 0.1\n",
     "        X2 = numpy.random.random((X.shape[0], 3)) * 0.2 - 0.1\n",
     "        X2[:, i] += 1\n",
-    "        Yb = Y == i\n",
+    "        Yb = i == Y\n",
     "        XS.append(numpy.hstack([X, X2]))\n",
     "        Yb = Yb.reshape((len(Yb), 1))\n",
     "        YS.append(Yb)\n",
@@ -2017,11 +1873,11 @@
     "    XS = []\n",
     "    YS = []\n",
     "    for i in classes:\n",
-    "        for k in range(0, 5):\n",
+    "        for k in range(5):\n",
     "            # X2 = numpy.random.randn((X.shape[0]* 3)).reshape(X.shape[0], 3) * 0.3\n",
     "            X2 = numpy.random.random((X.shape[0], 3)) * 0.8 - 0.4\n",
     "            X2[:, i] += 1\n",
-    "            Yb = Y == i\n",
+    "            Yb = i == Y\n",
     "            XS.append(numpy.hstack([X, X2]))\n",
     "            Yb = Yb.reshape((len(Yb), 1))\n",
     "            YS.append(Yb)\n",
@@ -2236,7 +2092,7 @@
     "    for i in classes:\n",
     "        X2 = numpy.random.random((X.shape[0], 3)) * 0.8 - 0.4\n",
     "        X2[:, i] += 1  # * ((i % 2) * 2 - 1)\n",
-    "        Yb = Y == i\n",
+    "        Yb = i == Y\n",
     "        XS.append(numpy.hstack([X, X2]))\n",
     "        Yb = Yb.reshape((len(Yb), 1))\n",
     "        YS.append(Yb)\n",
@@ -2296,7 +2152,7 @@
    "source": [
     "M = numpy.zeros((9, 6))\n",
     "Y = numpy.zeros((9, 1))\n",
-    "for i in range(0, 9):\n",
+    "for i in range(9):\n",
     "    M[i, i // 3] = 1\n",
     "    M[i, i % 3 + 3] = 1\n",
     "    Y[i] = 1 if i // 3 == i % 3 else 0\n",
