--- a/_doc/notebooks/dsgarden/file_dattente_ex.ipynb
+++ b/_doc/notebooks/dsgarden/file_dattente_ex.ipynb
@@ -37,7 +37,6 @@
     }
    ],
    "source": [
-    "import math\n",
     "import random\n",
     "\n",
     "\n",
@@ -96,16 +95,16 @@
     }
    ],
    "source": [
-    "ampoule = [0 for a in range(0, S)]\n",
+    "ampoule = [0 for a in range(S)]\n",
     "moyenne_grille = 0\n",
     "stats = []\n",
     "\n",
     "\n",
-    "for i in range(0, iteration):\n",
+    "for i in range(iteration):\n",
     "    grille = 0\n",
     "    mean = 0\n",
     "\n",
-    "    for n in range(0, S):\n",
+    "    for n in range(S):\n",
     "        mean += ampoule[n]\n",
     "        if ampoule[n] == 0:\n",
     "            # remplacement d'une ampoule grillée\n",
