--- a/_doc/notebooks/dsgarden/quantization_f8.ipynb
+++ b/_doc/notebooks/dsgarden/quantization_f8.ipynb
@@ -173,7 +173,8 @@
     "    f\"Distribution des coefficients\\nd'une matrice de coefficients\\n{cf.size} éléments\"\n",
     ")\n",
     "axs[1].hist(cf01, bins=2048)\n",
-    "axs[1].set_title(f\"Même distribution entre 0 et {cf01.max():.4f}\\n{cf01.size} éléments\");"
+    "title = f\"Même distribution entre 0 et {cf01.max():.4f}\\n{cf01.size} éléments\"\n",
+    "axs[1].set_title(title);"
    ]
   },
   {
@@ -205,7 +206,7 @@
     "import numpy\n",
     "from onnx.numpy_helper import float8e4m3_to_float32\n",
     "\n",
-    "float8 = [float8e4m3_to_float32(i) for i in range(0, 256)]\n",
+    "float8 = [float8e4m3_to_float32(i) for i in range(256)]\n",
     "no_nan8 = [f for f in float8 if not numpy.isnan(f)]\n",
     "len(no_nan8)"
    ]
@@ -300,7 +301,7 @@
     "    the distribution of the coefficients is gaussian.\n",
     "    \"\"\"\n",
     "    if to == TensorProto.FLOAT8E4M3FN:\n",
-    "        float8 = [float8e4m3_to_float32(i) for i in range(0, 256)]\n",
+    "        float8 = [float8e4m3_to_float32(i) for i in range(256)]\n",
     "        quant_float = [f for f in float8 if not numpy.isnan(f)]\n",
     "        if method == \"naive\":\n",
     "            std_coef = numpy.std(coef.ravel())\n",
@@ -315,7 +316,6 @@
     "        zero = 0.0\n",
     "        scale = std_quant / std_coef\n",
     "    elif to == TensorProto.UINT8:\n",
-    "        uint8 = [i for i in range(0, 256)]\n",
     "        qu = numpy.quantile(coef.ravel(), [1 - threshold, threshold])\n",
     "        scale = 255 / (qu[1] - qu[0])\n",
     "        zero = qu[0] * scale\n",
@@ -404,7 +404,7 @@
     "axs[0].hist(no_nan8, bins=512, alpha=0.5, label=\"f8\", density=True)\n",
     "axs[0].legend()\n",
     "axs[0].set_xlim([-200, 200])\n",
-    "axs[0].set_title(f\"Distribution des coefficients à l'échelle\\nfloat 8\")\n",
+    "axs[0].set_title(\"Distribution des coefficients à l'échelle\\nfloat 8\")\n",
     "\n",
     "axs[1].hist(\n",
     "    coef.ravel() / scale_f8p, bins=512, density=True, label=\"coef_f8\", alpha=0.5\n",
@@ -412,7 +412,7 @@
     "axs[1].hist(no_nan8, bins=512, alpha=0.5, label=\"f8\", density=True)\n",
     "axs[1].legend()\n",
     "axs[1].set_xlim([-200, 200])\n",
-    "axs[1].set_title(f\"Distribution des coefficients à l'échelle\\nfloat 8 method='power'\")\n",
+    "axs[1].set_title(\"Distribution des coefficients à l'échelle\\nfloat 8 method='power'\")\n",
     "\n",
     "axs[2].hist(\n",
     "    coef.ravel() / scale_u8 + zero_u8,\n",
@@ -423,7 +423,7 @@
     ")\n",
     "axs[2].hist(list(range(256)), bins=100, alpha=0.5, label=\"u8\", density=True)\n",
     "axs[2].legend()\n",
-    "axs[2].set_title(f\"Distribution des coefficients à l'échelle\\nuint 8\");"
+    "axs[2].set_title(\"Distribution des coefficients à l'échelle\\nuint 8\");"
    ]
   },
   {
@@ -640,7 +640,7 @@
     "    axs[i, 2].hist(coef.ravel(), bins=bins, density=True, label=\"coef\", alpha=0.5)\n",
     "    axs[i, 2].hist(qu_u8, bins=bins, alpha=0.5, label=\"qdq_u8\", density=True)\n",
     "    axs[i, 2].legend()\n",
-    "    axs[i, 2].set_title(f\"QDQ uint 8\\nerr={err_u8:1.3g}\");"
+    "    axs[i, 2].set_title(f\"QDQ uint 8\\nerr={err_u8:1.3g}\")"
    ]
   },
   {
