--- a/_doc/notebooks/ml/logreg_voronoi.ipynb
+++ b/_doc/notebooks/ml/logreg_voronoi.ipynb
@@ -11,17 +11,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from jyquickhelper import add_notebook_menu\n",
-    "\n",
-    "add_notebook_menu()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -225,6 +214,7 @@
     "        \"White\",\n",
     "        \"Black\",\n",
     "    ]\n",
+    "    del _unused_\n",
     "\n",
     "    h = 0.02  # step size in the mesh\n",
     "    # Plot the decision boundary. For that, we will assign a color to each\n",
@@ -258,7 +248,7 @@
     "    x1, x2 = xx.min(), xx.max()\n",
     "    cl = 0\n",
     "    if border:\n",
-    "        for i in range(0, clr.coef_.shape[0]):\n",
+    "        for i in range(clr.coef_.shape[0]):\n",
     "            for j in range(i + 1, clr.coef_.shape[0]):\n",
     "                delta = clr.coef_[i] - clr.coef_[j]\n",
     "                db = clr.intercept_[i] - clr.intercept_[j]\n",
@@ -267,7 +257,7 @@
     "                ax.plot([x1, x2], [y1, y2], \"--\", color=\"white\")\n",
     "                cl += 1\n",
     "    else:\n",
-    "        for i in range(0, clr.coef_.shape[0]):\n",
+    "        for i in range(clr.coef_.shape[0]):\n",
     "            delta = clr.coef_[i]\n",
     "            db = clr.intercept_[i]\n",
     "            y1 = (-db - delta[0] * x1) / delta[1]\n",
@@ -395,7 +385,6 @@
    ],
    "source": [
     "from matplotlib.patches import Circle\n",
-    "from matplotlib.collections import PatchCollection\n",
     "\n",
     "points = numpy.array([[1, 1], [2, 4], [4, 1], [6, 3]])\n",
     "vor = Voronoi(points)\n",
@@ -512,7 +501,7 @@
     "matB = []\n",
     "L = clr.coef_\n",
     "B = clr.intercept_\n",
-    "for i in range(0, L.shape[0]):\n",
+    "for i in range(L.shape[0]):\n",
     "    for j in range(i + 1, L.shape[0]):\n",
     "        li = L[i, :]\n",
     "        lj = L[j, :]\n",
@@ -922,8 +911,8 @@
     "Xs = []\n",
     "Ys = []\n",
     "n = 20\n",
-    "for i in range(0, 4):\n",
-    "    for j in range(0, 3):\n",
+    "for i in range(4):\n",
+    "    for j in range(3):\n",
     "        x1 = numpy.random.rand(n) + i * 1.1\n",
     "        x2 = numpy.random.rand(n) + j * 1.1\n",
     "        Xs.append(numpy.vstack([x1, x2]).T)\n",
@@ -978,9 +967,9 @@
    ],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(6, 4))\n",
-    "for i in range(0, 12):\n",
+    "for i in range(12):\n",
     "    ax.plot(\n",
-    "        X[Y == i, 0], X[Y == i, 1], \"o\", label=\"cl%d\" % i, color=plt.cm.tab20.colors[i]\n",
+    "        X[i == Y, 0], X[i == Y, 1], \"o\", label=\"cl%d\" % i, color=plt.cm.tab20.colors[i]\n",
     "    )\n",
     "ax.legend()\n",
     "ax.set_title(\"Classification à neuf classes\\ndans un quadrillage\");"
@@ -1278,7 +1267,7 @@
     "Xs = []\n",
     "Ys = []\n",
     "n = 20\n",
-    "for i in range(0, 12):\n",
+    "for i in range(12):\n",
     "    x1 = numpy.random.rand(n) + 2.3 * cos(i / 12.0 * 2 * pi)\n",
     "    x2 = numpy.random.rand(n) + 2.3 * sin(i / 12.0 * 2 * pi)\n",
     "    Xs.append(numpy.vstack([x1, x2]).T)\n",
@@ -1306,9 +1295,9 @@
    ],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(6, 4))\n",
-    "for i in range(0, 12):\n",
+    "for i in range(12):\n",
     "    ax.plot(\n",
-    "        X[Y == i, 0], X[Y == i, 1], \"o\", label=\"cl%d\" % i, color=plt.cm.tab20.colors[i]\n",
+    "        X[i == Y, 0], X[i == Y, 1], \"o\", label=\"cl%d\" % i, color=plt.cm.tab20.colors[i]\n",
     "    )\n",
     "ax.legend()\n",
     "ax.set_title(\"Classification à neuf classes\\ndans un quadrillage\");"
@@ -1384,8 +1373,8 @@
     "Xs = []\n",
     "Ys = []\n",
     "n = 20\n",
-    "for i in range(0, 4):\n",
-    "    for j in range(0, 3):\n",
+    "for i in range(4):\n",
+    "    for j in range(3):\n",
     "        x1 = numpy.random.rand(n) + i * 3\n",
     "        x2 = numpy.random.rand(n) + j * 3\n",
     "        Xs.append(numpy.vstack([x1, x2]).T)\n",
@@ -1510,8 +1499,8 @@
     "Xs = []\n",
     "Ys = []\n",
     "n = 20\n",
-    "for i in range(0, 4):\n",
-    "    for j in range(0, 3):\n",
+    "for i in range(4):\n",
+    "    for j in range(3):\n",
     "        x1 = numpy.random.rand(n) + i * 1.1\n",
     "        x2 = numpy.random.rand(n) + j * 1.1\n",
     "        Xs.append(numpy.vstack([x1, x2]).T)\n",
@@ -1540,7 +1529,7 @@
    "source": [
     "bary = []\n",
     "for i in range(12):\n",
-    "    b = X[Y == i].mean(axis=0)\n",
+    "    b = X[i == Y].mean(axis=0)\n",
     "    bary.append(b)\n",
     "barys = numpy.vstack(bary)\n",
     "barys.shape"
@@ -1673,7 +1662,7 @@
     "for i in range(n):\n",
     "    for j in range(n):\n",
     "        dil = ((i + 1) ** 2 + (j + 1) ** 2) ** 0.6\n",
-    "        for k in range(0, 20):\n",
+    "        for k in range(20):\n",
     "            x = i + j * math.cos(a)\n",
     "            y = j * math.sin(a)\n",
     "            points.append([x * dil, y * dil])\n",
@@ -1681,7 +1670,7 @@
     "            mi = 0.5\n",
     "            for r in [0.1, 0.3, mi]:\n",
     "                nb = 6 if r == mi else 12\n",
-    "                for k in range(0, nb):\n",
+    "                for k in range(nb):\n",
     "                    x = (\n",
     "                        i\n",
     "                        + j * math.cos(a)\n",
@@ -1715,10 +1704,10 @@
    ],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(6, 4))\n",
-    "for i in range(0, max(Y) + 1):\n",
+    "for i in range(max(Y) + 1):\n",
     "    ax.plot(\n",
-    "        X[Y == i, 0],\n",
-    "        X[Y == i, 1],\n",
+    "        X[i == Y, 0],\n",
+    "        X[i == Y, 1],\n",
     "        \"o\",\n",
     "        label=\"cl%d\" % i,\n",
     "        color=plt.cm.tab20.colors[i % 20],\n",
@@ -1798,8 +1787,8 @@
     "Xs = []\n",
     "Ys = []\n",
     "n = 20\n",
-    "for i in range(0, 4):\n",
-    "    for j in range(0, 3):\n",
+    "for i in range(4):\n",
+    "    for j in range(3):\n",
     "        x1 = numpy.random.rand(n) + i * 1.1\n",
     "        x2 = numpy.random.rand(n) + j * 1.1\n",
     "        Xs.append(numpy.vstack([x1, x2]).T)\n",
@@ -1827,9 +1816,9 @@
    ],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(6, 4))\n",
-    "for i in range(0, 12):\n",
+    "for i in range(12):\n",
     "    ax.plot(\n",
-    "        X[Y == i, 0], X[Y == i, 1], \"o\", label=\"cl%d\" % i, color=plt.cm.tab20.colors[i]\n",
+    "        X[i == Y, 0], X[i == Y, 1], \"o\", label=\"cl%d\" % i, color=plt.cm.tab20.colors[i]\n",
     "    )\n",
     "ax.legend()\n",
     "ax.set_title(\"Classification à neuf classes\\ndans un quadrillage\");"
