--- a/_doc/notebooks/ml/neural_tree_cost.ipynb
+++ b/_doc/notebooks/ml/neural_tree_cost.ipynb
@@ -12,151 +12,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "dd51a9c7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div id=\"my_id_menu_nb\">run previous cell, wait for 2 seconds</div>\n",
-       "<script>\n",
-       "function repeat_indent_string(n){\n",
-       "    var a = \"\" ;\n",
-       "    for ( ; n > 0 ; --n)\n",
-       "        a += \"    \";\n",
-       "    return a;\n",
-       "}\n",
-       "// look up into all sections and builds an automated menu //\n",
-       "var update_menu_string = function(begin, lfirst, llast, sformat, send, keep_item, begin_format, end_format) {\n",
-       "    var anchors = document.getElementsByClassName(\"section\");\n",
-       "    if (anchors.length == 0) {\n",
-       "        anchors = document.getElementsByClassName(\"text_cell_render rendered_html\");\n",
-       "    }\n",
-       "    var i,t;\n",
-       "    var text_menu = begin;\n",
-       "    var text_memo = \"<pre>\\nlength:\" + anchors.length + \"\\n\";\n",
-       "    var ind = \"\";\n",
-       "    var memo_level = 1;\n",
-       "    var href;\n",
-       "    var tags = [];\n",
-       "    var main_item = 0;\n",
-       "    var format_open = 0;\n",
-       "    for (i = 0; i <= llast; i++)\n",
-       "        tags.push(\"h\" + i);\n",
-       "\n",
-       "    for (i = 0; i < anchors.length; i++) {\n",
-       "        text_memo += \"**\" + anchors[i].id + \"--\\n\";\n",
-       "\n",
-       "        var child = null;\n",
-       "        for(t = 0; t < tags.length; t++) {\n",
-       "            var r = anchors[i].getElementsByTagName(tags[t]);\n",
-       "            if (r.length > 0) {\n",
-       "child = r[0];\n",
-       "break;\n",
-       "            }\n",
-       "        }\n",
-       "        if (child == null) {\n",
-       "            text_memo += \"null\\n\";\n",
-       "            continue;\n",
-       "        }\n",
-       "        if (anchors[i].hasAttribute(\"id\")) {\n",
-       "            // when converted in RST\n",
-       "            href = anchors[i].id;\n",
-       "            text_memo += \"#1-\" + href;\n",
-       "            // passer à child suivant (le chercher)\n",
-       "        }\n",
-       "        else if (child.hasAttribute(\"id\")) {\n",
-       "            // in a notebook\n",
-       "            href = child.id;\n",
-       "            text_memo += \"#2-\" + href;\n",
-       "        }\n",
-       "        else {\n",
-       "            text_memo += \"#3-\" + \"*\" + \"\\n\";\n",
-       "            continue;\n",
-       "        }\n",
-       "        var title = child.textContent;\n",
-       "        var level = parseInt(child.tagName.substring(1,2));\n",
-       "\n",
-       "        text_memo += \"--\" + level + \"?\" + lfirst + \"--\" + title + \"\\n\";\n",
-       "\n",
-       "        if ((level < lfirst) || (level > llast)) {\n",
-       "            continue ;\n",
-       "        }\n",
-       "        if (title.endsWith('¶')) {\n",
-       "            title = title.substring(0,title.length-1).replace(\"<\", \"&lt;\")\n",
-       "         .replace(\">\", \"&gt;\").replace(\"&\", \"&amp;\");\n",
-       "        }\n",
-       "        if (title.length == 0) {\n",
-       "            continue;\n",
-       "        }\n",
-       "\n",
-       "        while (level < memo_level) {\n",
-       "            text_menu += end_format + \"</ul>\\n\";\n",
-       "            format_open -= 1;\n",
-       "            memo_level -= 1;\n",
-       "        }\n",
-       "        if (level == lfirst) {\n",
-       "            main_item += 1;\n",
-       "        }\n",
-       "        if (keep_item != -1 && main_item != keep_item + 1) {\n",
-       "            // alert(main_item + \" - \" + level + \" - \" + keep_item);\n",
-       "            continue;\n",
-       "        }\n",
-       "        while (level > memo_level) {\n",
-       "            text_menu += \"<ul>\\n\";\n",
-       "            memo_level += 1;\n",
-       "        }\n",
-       "        text_menu += repeat_indent_string(level-2);\n",
-       "        text_menu += begin_format + sformat.replace(\"__HREF__\", href).replace(\"__TITLE__\", title);\n",
-       "        format_open += 1;\n",
-       "    }\n",
-       "    while (1 < memo_level) {\n",
-       "        text_menu += end_format + \"</ul>\\n\";\n",
-       "        memo_level -= 1;\n",
-       "        format_open -= 1;\n",
-       "    }\n",
-       "    text_menu += send;\n",
-       "    //text_menu += \"\\n\" + text_memo;\n",
-       "\n",
-       "    while (format_open > 0) {\n",
-       "        text_menu += end_format;\n",
-       "        format_open -= 1;\n",
-       "    }\n",
-       "    return text_menu;\n",
-       "};\n",
-       "var update_menu = function() {\n",
-       "    var sbegin = \"\";\n",
-       "    var sformat = '<a href=\"#__HREF__\">__TITLE__</a>';\n",
-       "    var send = \"\";\n",
-       "    var begin_format = '<li>';\n",
-       "    var end_format = '</li>';\n",
-       "    var keep_item = -1;\n",
-       "    var text_menu = update_menu_string(sbegin, 2, 4, sformat, send, keep_item,\n",
-       "       begin_format, end_format);\n",
-       "    var menu = document.getElementById(\"my_id_menu_nb\");\n",
-       "    menu.innerHTML=text_menu;\n",
-       "};\n",
-       "window.setTimeout(update_menu,2000);\n",
-       "            </script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from jyquickhelper import add_notebook_menu\n",
-    "\n",
-    "add_notebook_menu()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "e6ad71f6",
    "metadata": {},
@@ -965,7 +820,7 @@
     "for d in tqdm(range(2, 10)):\n",
     "    tree = DecisionTreeRegressor(max_depth=d)\n",
     "    tree.fit(X_train, y_train)\n",
-    "    obs = measure_time(lambda: tree.predict(xe), number=20, repeat=20)\n",
+    "    obs = measure_time(lambda tree=tree: tree.predict(xe), number=20, repeat=20)\n",
     "    obs.update(dict(d=d, exp=\"skl\"))\n",
     "    data.append(obs)\n",
     "\n",
@@ -973,14 +828,22 @@
     "\n",
     "    onx_tree = to_onnx(tree, X[:1].astype(numpy.float32))\n",
     "    onx_nn = to_onnx(nn, X[:1].astype(numpy.float32))\n",
-    "    oinf_tree = OnnxInference(onx_tree, runtime=\"onnxruntime1\")\n",
-    "    oinf_nn = OnnxInference(onx_nn, runtime=\"onnxruntime1\")\n",
+    "    oinf_tree = InferenceSession(\n",
+    "        onx_tree.SerializePartialToString(), providers=[\"CPUExecutionProvider\"]\n",
+    "    )\n",
+    "    oinf_nn = InferenceSession(\n",
+    "        onx_nn.SerializePartialToString(), providers=[\"CPUExecutionProvider\"]\n",
+    "    )\n",
     "\n",
-    "    obs = measure_time(lambda: oinf_tree.run({\"X\": xe}), number=10, repeat=10)\n",
+    "    obs = measure_time(\n",
+    "        lambda oinf_tree=oinf_tree: oinf_tree.run(None, {\"X\": xe}), number=10, repeat=10\n",
+    "    )\n",
     "    obs.update(dict(d=d, exp=\"onx_tree\"))\n",
     "    data.append(obs)\n",
     "\n",
-    "    obs = measure_time(lambda: oinf_nn.run({\"X\": xe}), number=10, repeat=10)\n",
+    "    obs = measure_time(\n",
+    "        lambda oinf_nn=oinf_nn: oinf_nn.run(None, {\"X\": xe}), number=10, repeat=10\n",
+    "    )\n",
     "    obs.update(dict(d=d, exp=\"onx_nn\"))\n",
     "    data.append(obs)\n",
     "\n",
